# oatpad

./: .gitignore  CHANGELOG.md  LICENSE  PLAN_COMPONENT_TESTS.md  PLAN_SHARED_SCHEMA.md  PLAN_SIDEBAR_SPLIT.md  README.md  REVIEW.md  SPEC.md  index.html  justfile  package-lock.json  package.json  release-please-config.json  tsconfig.json  vite.config.ts  vitest.setup.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  lint-pr-title.yml  release-build.yml  release-please-merge.yml  release-please.yml  release-publish.yml  release.yml
mcp/: .mcpbignore  README.md  manifest.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
mcp/src/: index.ts  meetings.test.ts  meetings.ts  proxy.test.ts  proxy.ts  sessions.test.ts  sessions.ts
shared/: oats-format.d.ts
src/: App.svelte  Cargo.toml  app.css  main.ts  tauri.conf.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-web/: App.svelte  App.test.ts  DESIGN.md  app.css  layout.css  main.ts  motion.css  palette.css  typography.css
src-web/components/: Coachmark.svelte  Coachmark.test.ts  DateTimeBubble.svelte  DateTimeBubble.test.ts  EditableLabel.svelte  EditableLabel.test.ts  Editor.idle.test.ts  Editor.svelte  Editor.test.ts  GettingStarted.svelte  Header.svelte  Header.test.ts  IconButton.svelte  McpRow.svelte  McpRow.test.ts  MeetingList.svelte  MeetingMeta.svelte  MeetingMeta.test.ts  MeetingName.svelte  OatpadTitle.svelte  SearchBubble.svelte  (+8 more)
src/capabilities/: default.json
src/components/: Editor.svelte  Header.svelte  MeetingMeta.svelte  MeetingName.svelte  OatpadTitle.svelte  Sidebar.svelte  ThemeToggle.svelte
src/icons/: icon.icns
src/lib/: calendar.test.ts  calendar.ts  commit.test.ts  commit.ts  file.test.ts  file.ts  markdown.ts  meetingFilter.test.ts  meetingPhase.test.ts  meetingPhase.ts  meetings.ts  noteFlush.test.ts  noteIds.ts  paragraphs.test.ts  paragraphs.ts  platform.ts  reducer.test.ts  reducer.ts  sessionFilter.test.ts  sessionFilter.ts  sessions.ts  store.svelte.ts  store.test.ts  store.web.test.ts  theme.ts  types.ts
src/src/: lib.rs  main.rs  mcp_server.rs  meetings.rs
(+39 files in other folders)
