[package]
name = "oatpad"
version = "0.12.0" # x-release-please-version
description = "Meeting notes app with timestamped edit history"
authors = ["Tom Shelton-Lefley"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "oatpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["macros", "net", "io-util", "fs", "sync", "rt"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4"] }

# macOS-only: query the OS-rendered traffic light geometry so the
# header can align icons with whatever AppKit actually drew, instead
# of guessing offsets that drift between debug and release builds.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }
